k8s/bases/http-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-api
  template:
    metadata:
      labels:
        app: http-api
    spec:
      containers:
        - name: http-api
          image: http-api
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
