k8s/bases/http-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-api
spec:
  selector:
    app: http-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
